objects/hed__Credential__c.object
<CustomObject>
    <description>Represents an industry or organizational achievement such as a badge, certification, or license.</description>
    <label>Credential</label>
    <nameField>
        <label>Credential Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>hed__Issuer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the issuing organization of the Credential.</description>
        <inlineHelpText>The issuing organization of the Credential.</inlineHelpText>
        <label>Issuer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credentials</relationshipLabel>
        <relationshipName>Credentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Description__c</fullName>
        <description>The description of the Credential.</description>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hed__Abbreviation__c</fullName>
        <description>The abbreviation of the Credential.</description>
        <inlineHelpText>The abbreviation of the Credential.</inlineHelpText>
        <label>Abbreviation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Extended_Name__c</fullName>
        <description>The full name of the Credential.</description>
        <inlineHelpText>The full name of the Credential.</inlineHelpText>
        <label>Extended Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Academic_Level__c</fullName>
        <description>The grade level, developmental level, or age level of the Credential.</description>
        <inlineHelpText>The Academic Level of the Credential. For example, the Academic Certification was obtained as part of Professional Education.</inlineHelpText>
        <label>Academic Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-K/Preschool</fullName>
                </value>
                <value>
                    <fullName>Elementary</fullName>
                </value>
                <value>
                    <fullName>Middle School</fullName>
                </value>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>Undergraduate</fullName>
                </value>
                <value>
                    <fullName>Graduate</fullName>
                </value>
                <value>
                    <fullName>Doctoral</fullName>
                </value>
                <value>
                    <fullName>Post-Baccalaureate Certificate</fullName>
                </value>
                <value>
                    <fullName>Adult Education</fullName>
                </value>
                <value>
                    <fullName>Professional Education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Field_Of_Study__c</fullName>
        <description>The field of study for the Credential.</description>
        <inlineHelpText>The field of study for the Credential.</inlineHelpText>
        <label>Field of Study</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Business, Management, and Marketing</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Computer and Information Sciences</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>English Language, Literature, and Letters</fullName>
                </value>
                <value>
                    <fullName>Family and Consumer Sciences</fullName>
                </value>
                <value>
                    <fullName>Foreign Languages</fullName>
                </value>
                <value>
                    <fullName>General Studies and Humanities</fullName>
                </value>
                <value>
                    <fullName>Health Professions</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
                <value>
                    <fullName>Legal Professions and Studies</fullName>
                </value>
                <value>
                    <fullName>Mathematics and Statistics</fullName>
                </value>
                <value>
                    <fullName>Natural Resources and Conservation</fullName>
                </value>
                <value>
                    <fullName>Philosophy and Religious Studies</fullName>
                </value>
                <value>
                    <fullName>Physical Sciences</fullName>
                </value>
                <value>
                    <fullName>Psychology</fullName>
                </value>
                <value>
                    <fullName>Social Sciences</fullName>
                </value>
                <value>
                    <fullName>Visual and Performing Arts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Earning_Criteria__c</fullName>
        <description>A description of earning criteria for the Credential or what it takes to earn the Credential.</description>
        <inlineHelpText>A description of what&apos;s required to earn the Credential.</inlineHelpText>
        <label>Earning Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hed__Credentialing_Identifier__c</fullName>
        <description>An International Resource Identifier that uniquely identifies this credential.</description>
        <externalId>true</externalId>
        <inlineHelpText>An International Resource Identifier that uniquely identifies this credential.</inlineHelpText>
        <label>Credentialing Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>hed__All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>hed__Academic_Level__c</columns>
        <columns>hed__Field_Of_Study__c</columns>
        <columns>hed__Issuer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>hed__Badge</fullName>
        <active>true</active>
        <description>A symbol of achievement.</description>
        <label>Badge</label>
    </recordTypes>
    <recordTypes>
        <fullName>hed__License</fullName>
        <active>true</active>
        <description>A credential indicating a person is licensed for certain activities.</description>
        <label>License</label>
    </recordTypes>
    <recordTypes>
        <fullName>hed__Certification</fullName>
        <active>true</active>
        <description>A non-credit certification.</description>
        <label>Certification</label>
    </recordTypes>
</CustomObject>